@@ -1,4 +1,8 @@
-﻿shmuel 13.08.2016 18:24:05 +0200 - build 581
+﻿shmuel 22.08.2016 19:14:55 +0200 - build 582
+
+1. LuaFAR: BreakKey в far.Menu() сделан полностью регистронезависимым.
+
+shmuel 13.08.2016 18:24:05 +0200 - build 581
 
 1. Уточнения 579,580.
 
